@@ -1,0 +1,33 @@
+#!/bin/bash -e
+
+#©keithhedger Mon 10 Oct 19:37:42 BST 2016 kdhedger68713@gmail.com
+KKEDIT=../../app/kkedit
+KKMSG=../../app/kkeditmsg
+INSTANCE=12345999
+
+#if arg then remove and flush q then exit
+if [ "X$1" != "X" ];then
+	$KKMSG -k $INSTANCE -fR
+	exit 0
+fi
+#make sure queue is empty
+$KKMSG -k $INSTANCE -f
+
+#open instance or bring to front
+($KKEDIT -i $INSTANCE) &
+
+#tell instance to inform us after loading has finished
+$KKMSG -k $INSTANCE -s "WaitForKKEdit" -a
+#open files
+$KKEDIT -i $INSTANCE /etc/group
+#block until finished loading
+$KKMSG -k $INSTANCE -b
+
+for ((j=5;j<10;j++))
+	do
+		$KKMSG -k $INSTANCE -s "GotoLine:$j"
+		$KKMSG -k $INSTANCE  -s "SelectBetween:2:6"
+		$KKMSG -k $INSTANCE  -s "Cut"
+		$KKMSG -k $INSTANCE  -s "InsertText:****"
+	done
+	$KKMSG -k $INSTANCE -a
